c4prj2_input/grade.txt
Grading at Fri Aug  2 21:50:42 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:22:44: error: operation on ‘str’ may be undefined [-Werror=sequence-point]
    card_t c = card_from_letters(*str, *(str++));
                                            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
